tests-system/freezing-3/output
n = 42
^ freezing-3/foo.trlc:4: error: cannot overwrite frozen component n
Processed 1 model and 1 requirement file and found 1 error
